front-ns/k8s/ops/front-ops-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-ops-svc
  namespace: front-ops
  labels:
    app: front-ops
spec:
  selector:
    app: front-ops
  #type: LoadBalancer
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
status:
  loadBalancer: {}
