front-ns/k8s/ops/front-ops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-ops-ingress
  namespace: front-ops
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: team2.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: front-ops-svc
            port:
              number: 3000
